--- a/AnalogSea.css
+++ b/AnalogSea.css
@@ -51,6 +51,7 @@ input {
 	padding: 15px;
 	font-size: 18px;
 	display: block;
+	border-radius: 2px;
 }
 
 button {
@@ -61,6 +62,7 @@ button {
 	color: white;
 	background-color: MediumSeaGreen;
 	border: none;
+	border-radius: 2px;
 }
 
 button:hover {
